# garmin-sync

./: README.md  download_fit.py  pyproject.toml
garmin_sync/: cli.py
